Fixed Centering
Fotter was not centered correctly with safari

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,6 @@
 }
 
 html, body {
-	margin: 0;
 	height: 100%;
 	color: #fff;
 }
@@ -89,7 +88,9 @@ button:focus {
 	color: #FED766;
 	border: 4px solid #FED766;
 	border-radius:24px;
-	transition: color 0.2s 0.3s, background-color 0.3s ease-in-out, width 0.3s 0s;
+	transition: color 0.2s 0.3s, 
+				background-color 0.3s ease-in-out, 
+				width 0.3s 0s;
 }
 
 /*======================================================
@@ -310,24 +311,23 @@ div.skill-block p {
 
 footer {
 	width: 100%;
-	height: 20%;
+	height: 10%;
 	background: #252a30;
-	display: flex;
+}
+
+footer div {
 	position: relative;
-	align-items: center;
-	justify-content: center;
+	top: 50%;
+	left: 50%;
+	-webkit-transform: translate(-50%, -50% );
+	-moz-transform: translate(-50%, -50% );
+	-o-transform: translate(-50%, -50% );
+	-ms-transform: translate(-50%, -50% );
+	transform: translate(-50%, -50% );
 }
 
-.footer-div {
-	position: absolute;
-	display: block;
-	margin: 0 auto;
-    text-align: center;
-}
-
-.footer-para {
-	display: block;
-    text-align: center;
+footer div p {
+	text-align: center;
 	padding: 0 20px;
 	font-size: 15px;
 	color: #FED766;
@@ -349,7 +349,9 @@ button.button-hide {
 	color: #252a30;
 	border: 3px solid #252a30;
 	border-radius:24px;
-	transition: color 0.2s 0.3s, background-color 0.3s ease-in-out, width 0.3s 0s;
+	transition: color 0.2s 0.3s, 
+				background-color 0.3s ease-in-out, 
+				width 0.3s 0s;
 }
 
 #number {
